--- a/SysMec-aspx/SysMec-aspx.csproj
+++ b/SysMec-aspx/SysMec-aspx.csproj
@@ -43,10 +43,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Microsoft.AI.DependencyCollector, Version=2.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.DependencyCollector.2.1.0\lib\net45\Microsoft.AI.DependencyCollector.dll</HintPath>
       <Private>True</Private>
@@ -94,9 +90,43 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CrearHorarios.aspx" />
+    <Content Include="images\img\catalogos.jpg" />
+    <Content Include="images\img\horarios.png" />
+    <Content Include="images\img\MAG-LogoPTN349.fw.png" />
+    <Content Include="images\index.html" />
+    <Content Include="IndexCatalogos.aspx" />
+    <Content Include="IndexCitas.aspx" />
+    <Content Include="IndexExpedientes.aspx" />
+    <Content Include="indexHorarios.aspx" />
+    <Content Include="IndexUsuarios.aspx" />
+    <Content Include="layout\index.html" />
+    <Content Include="layout\scripts\index.html" />
+    <Content Include="layout\scripts\jquery.jcarousel.pack.js" />
+    <Content Include="layout\scripts\jquery.jcarousel.setup.js" />
+    <Content Include="layout\scripts\jquery.min.js" />
+    <Content Include="layout\styles\featured_slide.css" />
+    <Content Include="layout\styles\forms.css" />
+    <Content Include="layout\styles\images\index.html" />
+    <Content Include="layout\styles\index.html" />
+    <Content Include="layout\styles\layout.css" />
+    <Content Include="layout\styles\navi.css" />
+    <Content Include="layout\styles\tables.css" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="MasterPage.master" />
+    <Content Include="App_Code\DataSetSysMec.xsc">
+      <DependentUpon>DataSetSysMec.xsd</DependentUpon>
+    </Content>
+    <None Include="App_Code\DataSetSysMec.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSetSysMec.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="App_Code\DataSetSysMec.xss">
+      <DependentUpon>DataSetSysMec.xsd</DependentUpon>
     </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -106,10 +136,54 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="pages\index.html" />
+    <Content Include="PaginaPrincipal.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Code\clsConexion.cs" />
+    <Content Include="App_Code\clsHorarioServicio.cs" />
+    <Content Include="App_Code\DataSetSysMec.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSetSysMec.xsd</DependentUpon>
+    </Content>
+    <Compile Include="CrearHorarios.aspx.cs">
+      <DependentUpon>CrearHorarios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexCatalogos.aspx.cs">
+      <DependentUpon>IndexCatalogos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexCitas.aspx.cs">
+      <DependentUpon>IndexCitas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexExpedientes.aspx.cs">
+      <DependentUpon>IndexExpedientes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="indexHorarios.aspx.cs">
+      <DependentUpon>indexHorarios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IndexUsuarios.aspx.cs">
+      <DependentUpon>IndexUsuarios.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MasterPage.master.cs">
+      <DependentUpon>MasterPage.master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PaginaPrincipal.aspx.cs">
+      <DependentUpon>PaginaPrincipal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="vistas\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
